force-app/main/default/objects/Referral_Partner__c/Referral_Partner__c.object-meta.xml
<CustomObject>
    <description>The partners that can be referred to.</description>
    <label>Referral Partner</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Referral Partner Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Referral Partners</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>