force-app/main/default/objects/Referral_Partner__c/fields/Always_Check_Send_Email__c.field-meta.xml
<CustomField>
    <fullName>Always_Check_Send_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>if checked, the Send Email box will be checked on the Referral. A selling opportunity will not be created. Only an email will be sent. case #20400405</description>
    <inlineHelpText>If checked, no Selling opty will be created, only an email will be sent.</inlineHelpText>
    <label>Always Check Send Email</label>
    <type>Checkbox</type>
</CustomField>