force-app/main/default/objects/Referral_Partner__c/fields/Case_RecordTypeId__c.field-meta.xml
<CustomField>
    <fullName>Case_RecordTypeId__c</fullName>
    <description>To create case from Lead conversion</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Case RecordTypeId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>