force-app/main/default/objects/Referral_Partner__c/fields/CheckForDuplicates__c.field-meta.xml
<CustomField>
    <fullName>CheckForDuplicates__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this if we want to check for duplicates before creating the new opportunity.</inlineHelpText>
    <label>Check For Duplicates</label>
    <type>Checkbox</type>
</CustomField>