force-app/main/default/objects/Referral_Partner__c/fields/CheckPartnerReferral__c.field-meta.xml
<CustomField>
    <fullName>CheckPartnerReferral__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Do we make sure there&apos;s a Partner Referral record when the referral records are saved?</inlineHelpText>
    <label>Check Partner Referral</label>
    <type>Checkbox</type>
</CustomField>