force-app/main/default/objects/Referral_Partner__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>If there is an overall default contact record, set it here. An example: Agency is not currently in Salesforce but all referrals will go to one email address. Default the email address here.</inlineHelpText>
    <label>Default Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Referral Partners</relationshipLabel>
    <relationshipName>Referral_Partners</relationshipName>
    <type>Lookup</type>
</CustomField>