force-app/main/default/objects/Referral_Partner__c/fields/CreateRefOpp__c.field-meta.xml
<CustomField>
    <fullName>CreateRefOpp__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Do we need to create an Opportunity for the Referring rep?</inlineHelpText>
    <label>Create Referring Opportunity</label>
    <type>Checkbox</type>
</CustomField>