force-app/main/default/objects/Referral_Partner__c/fields/Default_User__c.field-meta.xml
<CustomField>
    <fullName>Default_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This is the default user to assign all referrals for this referral partner to. Leave this blank to have the referral ownership set using normal rules.</inlineHelpText>
    <label>Default User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Referral_Partners</relationshipName>
    <type>Lookup</type>
</CustomField>