force-app/main/default/objects/Referral_Partner__c/fields/Emps_Min__c.field-meta.xml
<CustomField>
    <fullName>Emps_Min__c</fullName>
    <label>Emps Min</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>