force-app/main/default/objects/Referral_Partner__c/fields/Evaluate_Product_Of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Evaluate_Product_Of_Interest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Evaluate Product Of Interest</label>
    <type>Checkbox</type>
</CustomField>