force-app/main/default/objects/Referral_Partner__c/fields/NSS_Source__c.field-meta.xml
<CustomField>
    <fullName>NSS_Source__c</fullName>
    <inlineHelpText>Is this is an NSS Referral Partner, is this for Inbound, Outbound, or Both? If it&apos;s blank it&apos;s assumed to be for both.</inlineHelpText>
    <label>NSS Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Both</fullName>
            </value>
            <value>
                <fullName>Outbound</fullName>
            </value>
            <value>
                <fullName>Inbound</fullName>
            </value>
            <value>
                <fullName>Telereach</fullName>
            </value>
            <value>
                <fullName>Outbound-Oasis</fullName>
            </value>
            <value>
                <fullName>Inbound-Oasis</fullName>
            </value>
            <value>
                <fullName>MMS SDR</fullName>
            </value>
            <value>
                <fullName>Inbound-Ecommerce</fullName>
            </value>
            <value>
                <fullName>SurePayroll-Ecomm</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>