force-app/main/default/objects/Referral_Partner__c/fields/Partner_Type__c.field-meta.xml
<CustomField>
    <fullName>Partner_Type__c</fullName>
    <inlineHelpText>The type of partner - internal vs external</inlineHelpText>
    <label>Partner Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Amplifinity</fullName>
            </value>
            <value>
                <fullName>External Referral</fullName>
            </value>
            <value>
                <fullName>Inbound Partner Referral</fullName>
            </value>
            <value>
                <fullName>Integrated Selling</fullName>
            </value>
            <value>
                <fullName>Internal Referral</fullName>
            </value>
            <value>
                <fullName>NSS Referral</fullName>
            </value>
            <value>
                <fullName>Oasis</fullName>
            </value>
            <value>
                <fullName>PEO Referral</fullName>
            </value>
            <value>
                <fullName>SOAR Referral</fullName>
            </value>
            <value>
                <fullName>MMS SDR</fullName>
            </value>
            <value>
                <fullName>Ecommerce</fullName>
            </value>
            <value>
                <fullName>NSS Referral Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>