force-app/main/default/objects/Referral_Partner__c/fields/Permanent_Hold_Out_Description__c.field-meta.xml
<CustomField>
    <fullName>Permanent_Hold_Out_Description__c</fullName>
    <description>case #29212761 when this referral partner is used, put this value into the appropriate Account Permanent Hold Out Description field</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Permanent Hold Out Description</label>
    <length>100</length>
    <type>Text</type>
</CustomField>