force-app/main/default/objects/Referral_Partner__c/fields/Product_Of_Interest_Product_Group__c.field-meta.xml
<CustomField>
    <fullName>Product_Of_Interest_Product_Group__c</fullName>
    <label>Product Of Interest Product Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Payroll</fullName>
            </value>
            <value>
                <fullName>Retirement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>