force-app/main/default/objects/Referral_Partner__c/fields/QueueName__c.field-meta.xml
<CustomField>
    <fullName>QueueName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The name of the queue to send this to</inlineHelpText>
    <label>Queue Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>