force-app/main/default/objects/Referral_Partner__c/fields/Ref_To_Type__c.field-meta.xml
<CustomField>
    <fullName>Ref_To_Type__c</fullName>
    <inlineHelpText>The field type that will display in the Ref To column on the Referral Page</inlineHelpText>
    <label>Ref To Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Contact</fullName>
                <default>true</default>
                <label>Contact</label>
            </value>
            <value>
                <fullName>Referral Contact</fullName>
            </value>
            <value>
                <fullName>User</fullName>
            </value>
            <value>
                <fullName>Queue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>