force-app/main/default/objects/Referral_Partner__c/fields/ReferFromType__c.field-meta.xml
<CustomField>
    <fullName>ReferFromType__c</fullName>
    <description>Not sure if this needed - potentially delete DC 12/23/2015</description>
    <inlineHelpText>The type of record of the referring employee</inlineHelpText>
    <label>Refer From Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>User</fullName>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>