force-app/main/default/objects/Referral_Partner__c/fields/Referral_Contact__c.field-meta.xml
<CustomField>
    <fullName>Referral_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>If there&apos;s a default referral contact for this partner, set it here.</inlineHelpText>
    <label>Default Referral Contact</label>
    <referenceTo>Referral_Contact__c</referenceTo>
    <relationshipLabel>Referral Partners</relationshipLabel>
    <relationshipName>Referral_Partners</relationshipName>
    <type>Lookup</type>
</CustomField>