force-app/main/default/objects/Referral_Partner__c/fields/Referral_Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Referral_Product_Type__c</fullName>
    <description>APR0135089: Tracking/reporting field for Marketing. No workflow is driven by this.</description>
    <label>Referral Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ancillary</fullName>
            </value>
            <value>
                <fullName>ASO</fullName>
            </value>
            <value>
                <fullName>Cyber A Basic $300</fullName>
            </value>
            <value>
                <fullName>Digital Marketing</fullName>
            </value>
            <value>
                <fullName>ERTC</fullName>
            </value>
            <value>
                <fullName>ESR</fullName>
            </value>
            <value>
                <fullName>EW</fullName>
            </value>
            <value>
                <fullName>Flock</fullName>
            </value>
            <value>
                <fullName>FreshLime</fullName>
            </value>
            <value>
                <fullName>Individual Insurance</fullName>
            </value>
            <value>
                <fullName>Medical</fullName>
            </value>
            <value>
                <fullName>Merchant Services</fullName>
            </value>
            <value>
                <fullName>MSP</fullName>
            </value>
            <value>
                <fullName>New Plan</fullName>
            </value>
            <value>
                <fullName>Payroll</fullName>
            </value>
            <value>
                <fullName>PBA</fullName>
            </value>
            <value>
                <fullName>PEO</fullName>
            </value>
            <value>
                <fullName>PESS</fullName>
            </value>
            <value>
                <fullName>Prism</fullName>
            </value>
            <value>
                <fullName>TAA</fullName>
            </value>
            <value>
                <fullName>Workers Comp</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>