force-app/main/default/objects/Referral_Partner__c/fields/Report_Grouping__c.field-meta.xml
<CustomField>
    <fullName>Report_Grouping__c</fullName>
    <description>Roll up of different referral partner types in order to report off of.</description>
    <label>Report Grouping</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ancillary</fullName>
            </value>
            <value>
                <fullName>Core</fullName>
            </value>
            <value>
                <fullName>HNBF</fullName>
            </value>
            <value>
                <fullName>HR Services</fullName>
            </value>
            <value>
                <fullName>MMS</fullName>
            </value>
            <value>
                <fullName>Strategic Accounts</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>