force-app/main/default/objects/Referral_Partner__c/fields/Sales_Org__c.field-meta.xml
<CustomField>
    <fullName>Sales_Org__c</fullName>
    <inlineHelpText>The Sales Org for this Referral Partner - used for Zip Assignment lookup.</inlineHelpText>
    <label>Sales Org</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BenAdmin</fullName>
            </value>
            <value>
                <fullName>BusDev</fullName>
            </value>
            <value>
                <fullName>Ecommerce</fullName>
            </value>
            <value>
                <fullName>ESR</fullName>
            </value>
            <value>
                <fullName>EW</fullName>
            </value>
            <value>
                <fullName>HNBF</fullName>
            </value>
            <value>
                <fullName>HROI</fullName>
            </value>
            <value>
                <fullName>HRS</fullName>
            </value>
            <value>
                <fullName>Icon</fullName>
            </value>
            <value>
                <fullName>MMS</fullName>
            </value>
            <value>
                <fullName>MS</fullName>
            </value>
            <value>
                <fullName>MSP</fullName>
            </value>
            <value>
                <fullName>PAS</fullName>
            </value>
            <value>
                <fullName>PAY</fullName>
            </value>
            <value>
                <fullName>PC</fullName>
            </value>
            <value>
                <fullName>PEO</fullName>
            </value>
            <value>
                <fullName>TAA</fullName>
            </value>
            <value>
                <fullName>HRS WHOLESALER</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>