force-app/main/default/objects/Referral_Partner__c/fields/Selling_Opp_RecordTypeId__c.field-meta.xml
<CustomField>
    <fullName>Selling_Opp_RecordTypeId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The record type id for the selling Opportunity that will be generated - automatically populated by a trigger.</inlineHelpText>
    <label>Selling Opp RecordTypeId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>