force-app/main/default/objects/Referral_Partner__c/fields/SellingOpportunityType__c.field-meta.xml
<CustomField>
    <fullName>SellingOpportunityType__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>If there&apos;s a default Opportunity Type for the selling opportunity, it can be set here and will override any other rules that are in place.</inlineHelpText>
    <label>Selling Opportunity Type</label>
    <length>25</length>
    <type>Text</type>
</CustomField>