force-app/main/default/objects/Referral_Partner__c/fields/SetProspectOwnership__c.field-meta.xml
<CustomField>
    <fullName>SetProspectOwnership__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If we create an opportunity, do we set Prospect Ownership on that opportunity?</inlineHelpText>
    <label>Set Prospect Ownership</label>
    <type>Checkbox</type>
</CustomField>