force-app/main/default/objects/Referral_Partner__c/fields/SetReferralOwner__c.field-meta.xml
<CustomField>
    <fullName>SetReferralOwner__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Do we set the owner of the referral record (based on who the opportunity is being sent to) or leave it as the default (the running user)?</inlineHelpText>
    <label>Set Referral Owner</label>
    <type>Checkbox</type>
</CustomField>