force-app/main/default/objects/Referral_Partner__c/fields/Stage_Sales_Rep_needs_Approval__c.field-meta.xml
<CustomField>
    <fullName>Stage_Sales_Rep_needs_Approval__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Stage Sales Rep needs Approval</label>
    <length>50</length>
    <type>Text</type>
</CustomField>