force-app/main/default/objects/Referral_Partner__c/fields/Use_Contact__c.field-meta.xml
<CustomField>
    <fullName>Use_Contact__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Check this to link to the Contact (default). Uncheck to link to the Referral Contact.</inlineHelpText>
    <label>Use Contact</label>
    <type>Checkbox</type>
</CustomField>