force-app/main/default/objects/Referral_Partner__c/fields/UseApprovalProcess__c.field-meta.xml
<CustomField>
    <fullName>UseApprovalProcess__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Do we use the approval process before creating the selling opportunity?</inlineHelpText>
    <label>Use Approval Process</label>
    <type>Checkbox</type>
</CustomField>