force-app/main/default/objects/Referral_Partner__c/fields/UseInExtendedList__c.field-meta.xml
<CustomField>
    <fullName>UseInExtendedList__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If you want this value to be in the extended (Show More) list rather than in the initially displayed list.</inlineHelpText>
    <label>Use In Extended List</label>
    <type>Checkbox</type>
</CustomField>