force-app/main/default/objects/Referral_Partner__c/validationRules/Cannot_change_External_Partner_Names.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_change_External_Partner_Names</fullName>
    <active>true</active>
    <description>There is a dependency with a flow to send the email to external referral partners on Name. Only sysAdmin can change the name to ensure the flow is also updated.</description>
    <errorConditionFormula>AND(ISPICKVAL(Partner_Type__c, &apos;External Referral&apos;), NOT(BEGINS($Profile.Name,&quot;System Administrator&quot;)),
ISCHANGED(Name))</errorConditionFormula>
    <errorMessage>There is a dependency with a flow to send the email to external referral partners on Name. Only SysAdmin can change the name to ensure the flow is also updated with Name change.</errorMessage>
</ValidationRule>