force-app/main/default/objects/Referral_Partner__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Sales_Org__c</columns>
    <columns>UseRefPartnerName__c</columns>
    <columns>Sort_Order__c</columns>
    <columns>IsActive__c</columns>
    <columns>Partner_Type__c</columns>
    <columns>NSS_Source__c</columns>
    <columns>Contact__c</columns>
    <columns>Default_User__c</columns>
    <columns>Use_Contact__c</columns>
    <columns>UseUser__c</columns>
    <columns>SellingOpportunityType__c</columns>
    <columns>LockReferTo__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IsActive__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All</label>
</ListView>