force-app/main/default/objects/Referral_Partner__c/listViews/Ecommerce.listView-meta.xml
<ListView>
    <fullName>Ecommerce</fullName>
    <columns>NAME</columns>
    <columns>Sort_Order__c</columns>
    <columns>Ref_To_Type__c</columns>
    <columns>UseContact__c</columns>
    <columns>UseInExtendedList__c</columns>
    <columns>Default_User__c</columns>
    <columns>IsActive__c</columns>
    <columns>UseAncillary__c</columns>
    <columns>SellingOpportunityType__c</columns>
    <columns>NSS_Source__c</columns>
    <columns>Selling_Opp_RecordTypeId__c</columns>
    <columns>Contact__c</columns>
    <columns>ProductCodes__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Partner_Type__c</field>
        <operation>equals</operation>
        <value>Ecommerce</value>
    </filters>
    <label>Ecommerce</label>
</ListView>