force-app/main/default/objects/Referral_Partner__c/listViews/External.listView-meta.xml
<ListView>
    <fullName>External</fullName>
    <columns>NAME</columns>
    <columns>Partner_Type__c</columns>
    <columns>IsActive__c</columns>
    <columns>Sort_Order__c</columns>
    <columns>Ref_To_Type__c</columns>
    <columns>UseContact__c</columns>
    <columns>UseRefContact__c</columns>
    <columns>Contact__c</columns>
    <columns>Referral_Contact__c</columns>
    <columns>Selling_Opp_RecordTypeId__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Partner_Type__c</field>
        <operation>equals</operation>
        <value>External Referral</value>
    </filters>
    <label>External</label>
</ListView>