force-app/main/default/objects/Referral_Partner__c/listViews/H_B.listView-meta.xml
<ListView>
    <fullName>H_B</fullName>
    <columns>NAME</columns>
    <columns>Sales_Org__c</columns>
    <columns>Partner_Type__c</columns>
    <columns>UseAncillary__c</columns>
    <columns>Contact__c</columns>
    <columns>Referral_Contact__c</columns>
    <columns>Permanent_Hold_Out_Description__c</columns>
    <columns>Default_User__c</columns>
    <columns>IsActive__c</columns>
    <columns>AllowActivity__c</columns>
    <columns>Use_Contact__c</columns>
    <columns>CreateRefOpp__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>NSS_Source__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>hnbf,h&amp;B,p&amp;c,pc,hnb</value>
    </filters>
    <label>H&amp;B</label>
</ListView>