force-app/main/default/objects/Referral_Partner__c/listViews/Inactive.listView-meta.xml
<ListView>
    <fullName>Inactive</fullName>
    <columns>NAME</columns>
    <columns>Sort_Order__c</columns>
    <columns>IsActive__c</columns>
    <columns>Partner_Type__c</columns>
    <columns>Sales_Org__c</columns>
    <columns>NSS_Source__c</columns>
    <columns>Contact__c</columns>
    <columns>Use_Contact__c</columns>
    <columns>UsePrimaryZip__c</columns>
    <columns>UseUser__c</columns>
    <columns>SellingOpportunityType__c</columns>
    <columns>LockReferTo__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IsActive__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Inactive</label>
</ListView>