force-app/main/default/objects/Referral_Partner__c/listViews/Inbound_Oasis.listView-meta.xml
<ListView>
    <fullName>Inbound_Oasis</fullName>
    <columns>NAME</columns>
    <columns>Partner_Type__c</columns>
    <columns>Contact__c</columns>
    <columns>Default_User__c</columns>
    <columns>Sales_Org__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NSS_Source__c</field>
        <operation>equals</operation>
        <value>Inbound-Oasis</value>
    </filters>
    <filters>
        <field>IsActive__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Inbound-Oasis</label>
</ListView>