force-app/main/default/objects/Referral_Partner__c/listViews/MMS_SDR.listView-meta.xml
<ListView>
    <fullName>MMS_SDR</fullName>
    <columns>NAME</columns>
    <columns>Partner_Type__c</columns>
    <columns>UseAncillary__c</columns>
    <columns>Contact__c</columns>
    <columns>Referral_Contact__c</columns>
    <columns>Default_User__c</columns>
    <columns>IsActive__c</columns>
    <columns>Use_Contact__c</columns>
    <columns>CreateRefOpp__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>NSS_Source__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Partner_Type__c</field>
        <operation>equals</operation>
        <value>MMS SDR</value>
    </filters>
    <label>MMS SDR</label>
</ListView>