force-app/main/default/objects/Referral_Partner__c/listViews/MS_Merchant_Services.listView-meta.xml
<ListView>
    <fullName>MS_Merchant_Services</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>NAME</columns>
    <columns>Sort_Order__c</columns>
    <columns>Ref_To_Type__c</columns>
    <columns>UseContact__c</columns>
    <columns>Partner_Type__c</columns>
    <columns>UseInExtendedList__c</columns>
    <columns>Default_User__c</columns>
    <columns>UseUser__c</columns>
    <columns>CheckTeamSellingASO__c</columns>
    <columns>NSS_Source__c</columns>
    <columns>Selling_Opp_RecordTypeId__c</columns>
    <columns>CreateSellerActivity__c</columns>
    <columns>LockReferTo__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>MS</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>Merchant Services</value>
    </filters>
    <label>MS-Merchant Services</label>
</ListView>