force-app/main/default/objects/Referral_Partner__c/listViews/NSS_Outbound.listView-meta.xml
<ListView>
    <fullName>NSS_Outbound</fullName>
    <columns>NAME</columns>
    <columns>QueueName__c</columns>
    <columns>IsActive__c</columns>
    <columns>Sort_Order__c</columns>
    <columns>Ref_To_Type__c</columns>
    <columns>UseContact__c</columns>
    <columns>UseInExtendedList__c</columns>
    <columns>Default_User__c</columns>
    <columns>UseUser__c</columns>
    <columns>CheckTeamSellingASO__c</columns>
    <columns>CreateSellerActivity__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Contact__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Partner_Type__c</field>
        <operation>equals</operation>
        <value>NSS Referral</value>
    </filters>
    <filters>
        <field>NSS_Source__c</field>
        <operation>equals</operation>
        <value>Outbound</value>
    </filters>
    <label>NSS-Outbound</label>
</ListView>