force-app/main/default/objects/Referral_Partner__c/listViews/NSS_Team_Selling.listView-meta.xml
<ListView>
    <fullName>NSS_Team_Selling</fullName>
    <columns>NAME</columns>
    <columns>Sort_Order__c</columns>
    <columns>Ref_To_Type__c</columns>
    <columns>UseContact__c</columns>
    <columns>UseInExtendedList__c</columns>
    <columns>Default_User__c</columns>
    <columns>IsActive__c</columns>
    <columns>UseAncillary__c</columns>
    <columns>SellingOpportunityType__c</columns>
    <columns>NSS_Source__c</columns>
    <columns>Selling_Opp_RecordTypeId__c</columns>
    <columns>CreateSellerActivity__c</columns>
    <columns>AllowActivity__c</columns>
    <columns>SetProspectOwnership__c</columns>
    <columns>Contact__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Partner_Type__c</field>
        <operation>equals</operation>
        <value>NSS Referral</value>
    </filters>
    <filters>
        <field>CheckTeamSellingASO__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>NSS - Team Selling</label>
</ListView>