force-app/main/default/objects/Referral_Partner__c/listViews/Oasis.listView-meta.xml
<ListView>
    <fullName>Oasis</fullName>
    <columns>NAME</columns>
    <columns>IsActive__c</columns>
    <columns>Sort_Order__c</columns>
    <columns>Stage_Sales_Rep_needs_Approval__c</columns>
    <columns>Ref_To_Type__c</columns>
    <columns>Expired_SLA_queue__c</columns>
    <columns>UseUser__c</columns>
    <columns>CheckTeamSellingASO__c</columns>
    <columns>NSS_Source__c</columns>
    <columns>Selling_Opp_RecordTypeId__c</columns>
    <columns>SellingOpportunityType__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>QueueName__c</columns>
    <columns>SetProspectOwnership__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Partner_Type__c</field>
        <operation>equals</operation>
        <value>Oasis</value>
    </filters>
    <label>Oasis</label>
</ListView>