force-app/main/default/objects/Referral_Partner__c/listViews/Opportunity_Type_Default.listView-meta.xml
<ListView>
    <fullName>Opportunity_Type_Default</fullName>
    <columns>NAME</columns>
    <columns>Sales_Org__c</columns>
    <columns>Partner_Type__c</columns>
    <columns>UseAncillary__c</columns>
    <columns>Contact__c</columns>
    <columns>Referral_Contact__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>NSS_Source__c</columns>
    <columns>SellingOpportunityType__c</columns>
    <columns>Selling_Opp_RecordTypeId__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SellingOpportunityType__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Opportunity Type Default</label>
</ListView>