force-app/main/default/objects/Referral_Partner__c/listViews/SOAR.listView-meta.xml
<ListView>
    <fullName>SOAR</fullName>
    <columns>NAME</columns>
    <columns>Partner_Type__c</columns>
    <columns>Sort_Order__c</columns>
    <columns>Contact__c</columns>
    <columns>Referral_Contact__c</columns>
    <columns>Use_Contact__c</columns>
    <columns>CreateRefOpp__c</columns>
    <columns>Selling_Opp_RecordTypeId__c</columns>
    <columns>Default_User__c</columns>
    <columns>SellingOpportunityType__c</columns>
    <columns>UseAncillary__c</columns>
    <columns>NSS_Source__c</columns>
    <columns>Ref_To_Type__c</columns>
    <columns>Sales_Org__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Partner_Type__c</field>
        <operation>equals</operation>
        <value>SOAR Referral</value>
    </filters>
    <label>SOAR</label>
</ListView>